# kslim

./: Cargo.toml  README.md
src/: abi_policy.rs  command_render.rs  cpp.rs  device_bindings.rs  diagnostics.rs  edit_reason.rs  error.rs  exported_symbols.rs  fixups.rs  fsutil.rs  fuzz_fixtures.rs  generate.rs  git.rs  includes.rs  integrations.rs  lockfile.rs  main.rs  manifest.rs  matrix.rs  network_policy.rs  output_repo.rs  patches.rs  path_policy.rs  process.rs  prune.rs  publish.rs  removal_manifest.rs  runtime_registrations.rs  tree_index.rs  upstream.rs
src/abi/: mod.rs  policy.rs  surface.rs
src/cli/: args.rs  command.rs  entrypoint.rs  mod.rs
src/commands/: mod.rs
src/config/: load.rs  mod.rs  model.rs  profile_validation_tests.rs  source_map.rs  templates.rs  tests.rs  tests_defaults.rs  tests_load.rs  tests_validation.rs  validate.rs
src/core/: error.rs  fingerprint.rs  mod.rs  result.rs  serialization.rs  stable_id.rs
src/diagnostics/: classifier.rs  command_capture.rs  model.rs  renderer.rs  tests.rs
src/edit_reason/: proof_source.rs  reason.rs  render.rs  serialization.rs  validation.rs
src/execution/: argv.rs  cleanup.rs  environment.rs  log_capture.rs  mod.rs  timeout.rs
src/feature/: acpi_id_resolution.rs  conflict_detection.rs  device_compatible_resolution.rs  documentation_resolution.rs  exported_symbol_resolution.rs  firmware_path_resolution.rs  mod.rs  (+19 more)
tests/: failure.rs  features.rs  frozen_plan.rs  generate.rs  manifest.rs  matrix.rs  module_boundaries.rs  no_network.rs  offline.rs  publish.rs  reducer.rs  transactions.rs
(+439 files in other folders)
