[package]
name = "kslim"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
camino = { version = "1", features = ["serde1"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "serde"] }
tempfile = "3"
hex = "0.4"
dirs = "5"
log = "0.4"
env_logger = "0.11"
